--- a/reference/todo.yaml
+++ b/reference/todo.yaml
@@ -4,7 +4,18 @@ info:
   title: todo
   version: '1.0'
 servers:
-  - url: 'http://localhost:3000'
+  - url: https://{username}.server.com:{port}/{version}
+    variables:
+      username:
+        default: demo
+        description: This value is assigned by the service provider.
+      port:
+        enum:
+          - "8443"
+          - "443"
+        default: "8443"
+      version:
+        default: v1
 paths:
   /items:
     get:
